React course on Udemy

--- a/project1/src/App.css
+++ b/project1/src/App.css
@@ -1,3 +1,41 @@
 .App {
   text-align: center;
 }
+
+.btn {
+  width: 20%;
+  height: 30px;
+  cursor: pointer;
+  background-color: gray;
+  border: 1px solid;
+  transition: .2s ease-in-out;
+}
+
+span {
+  color: brown;
+}
+
+.sp {
+  color: rgb(138, 238, 138);
+}
+
+p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: gray;
+  color: aliceblue;
+  height: 30px;
+  border: 1px solid black;
+}
+
+.btn:hover {
+  background-color: brown;
+  border-radius: 50px;
+  transform: scale(1.04);
+}
+
+.btn:hover:active {
+  background-color: rgb(207, 145, 145);
+  border: none;
+}
