--- a/secretword/src/index.css
+++ b/secretword/src/index.css
@@ -7,14 +7,14 @@ body {
   margin: 0;
   padding: 0;
   background: linear-gradient(180deg, rgb(178, 255, 171) 0%, rgb(6, 61, 0)100%);
-  color: rgb(93, 145, 77);
+  color: rgb(66, 129, 60);
 }
 
 button {
   background: rgb(93, 131, 81);
-  color: white;
+  color: rgb(234, 255, 215);
   padding: 0 45px;
-  border: 2px solid white;
+  border: 2px solid rgb(234, 255, 215);
   border-radius: 25px;
   height: 50px;
   text-transform: uppercase;
