--- a/secretword/src/components/Game.css
+++ b/secretword/src/components/Game.css
@@ -19,6 +19,7 @@
 .wordContainer {
     margin:  1.5em;
     padding: 1.5em;
+    border-radius: 10px;
     border: 20px solid rgb(44, 70, 141);
     display: flex;
 }
@@ -56,7 +57,6 @@
     border: none;
     border-radius: 10px;
     background-color: rgb(234, 255, 215);
-    border: 3px solid rgb(42, 100, 40)
 }
 
 .wrongLettersContainer span {
