--- a/REQ-HTTP/reactrouter/src/Components/Navbar.css
+++ b/REQ-HTTP/reactrouter/src/Components/Navbar.css
@@ -2,21 +2,23 @@ nav {
     display: flex;
     justify-content: center;
     margin: 1rem 5rem 10rem;
-    gap: 5rem;
+    gap: 3rem;
 }
 
 nav a {
     margin: 0 10px;
-    padding:  5px;
+    padding: 10px 20px;
     text-decoration: none;
-    color: wheat
+    color: white;
 }
 
 nav a:hover {
-    color: rgb(224, 91, 91);;
+    color: rgb(102, 102, 102);
 }
 
 .active {
-    background-color: black;
-    color: white;
+    background-color: rgb(155, 139, 48);
+    border-radius: 4px;
+    color: #242424;
+    padding: 10px 20px;
 }
