Form style applied

--- a/Safira/src/components/Footer/Footer.module.css
+++ b/Safira/src/components/Footer/Footer.module.css
@@ -1,5 +1,6 @@
 .footer {
-    height: 250px;
+    height: 113px;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
