--- a/Safira/src/index.css
+++ b/Safira/src/index.css
@@ -13,6 +13,7 @@ body {
 input::placeholder,
 textarea::placeholder {
   font-family: Montserrat, sans-serif;
+  color:  #aaa;
 }
 
 input:focus,
@@ -37,6 +38,89 @@ nav button:hover {
   color: #bbb;
 }
 
+form {
+  max-width: 40%;
+  margin: 0 auto;
+}
 
+label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
+}
 
+label span {
+  margin-bottom:  .3em;
+  font-weight: bold;
+  text-align:  left;
+}
+
+input,
+textarea {
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  padding: .8em 0;
+  background-color: transparent;
+}
+
+.btn-div {
+  display: flex;
+  justify-content: end;
+}
+
+.btn {
+  background-color: #fff;
+  color: #242424;
+  text-align: center;
+  cursor: pointer;
+  width: 120px;
+  border: 1px solid transparent;
+  padding: 10px 15px;
+  font-size: 1em;
+  transition: .2s all ease-in-out;
+}
+
+.btn a {
+  color: #242424;
+}
+
+.btn.btn-dark {
+  background-color: #000;
+  border-radius: 0;
+}
+
+.btn.btn-outline {
+  background-color: transparent;
+  border-radius: 0;
+  color: #000;
+  border: 1px solid #000;
+  padding: 7px 30px;
+}
+
+.btn:hover {
+  background-color: transparent;
+  color: #fff;
+  border: 1px solid #fff;
+}
+
+.btn.btn-outline:hover {
+  background-color: #000;
+}
+
+.btn.btn-danger:hover {
+  background-color: #dc3545;
+}
+
+button[disabled] {
+  background-color: #aaa;
+}
+
+.container .error {
+  color: #721c24;
+  background-color: #f8d7da;
+  border: 1px solid #f5c6cb;
+  padding: 5px;
+  border-radius: 5px;
+}
 
