--- a/Safira/src/App.css
+++ b/Safira/src/App.css
@@ -1,4 +1,10 @@
+.App {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .container {
-  min-height: 60vh;
+  flex: 1;
   margin-bottom: 5em;
 }
